Revision history for Getopt-Euclid

0.2.x
  - Extended the grammar of recognized POD headers for required and optional arguments:
    [STANDARD|STD|PROGRAM|SCRIPT|CLI|COMMAND[-| ]LINE] [REQUIRED|MANDATORY] [PARAM|PARAMETER|ARG|ARGUMENT][S]
    [STANDARD|STD|PROGRAM|SCRIPT|CLI|COMMAND[-| ]LINE]      OPTION[AL|S]    [PARAM|PARAMETER|ARG|ARGUMENT][S]

0.2.7
  - Updated dependencies in Build.PL module

0.2.6
  - Bugfix: corrected a .pod file finding issue

0.2.5
  - Bugfix for #69324: more efficient and accurate POD extraction using Perl::Tidy
  - Bugfix for #29301: automatically looking for POD located into .pod files
  - Bugfix for #69105: file META.yml states which license the module uses
  - Bugfix for #34200: variables in constraint specifications are read as
    originating from the 'main' package namespace
  - Little internal modification to prevent identical placeholders that are
    present multiple times in the specification to be processed multiple times.
  - Error messages for arguments that do not validate against the constraints
    now display the value of variables instead of their name.

0.2.4
  - Default values can now be specified in the POD and displayed in the program
    documentation
  - Support for more integer arguments, e.g. scientific notation like 1E8
  - Support for arguments that cannot coexist using the 'exclude' keyword
  - New specifier to defer processing of @ARGV arguments: :defer
  - New method to pass an arbitrary array of arguments to parsing: process_args
  - New methods to access the program usage, version, manual and help messages
  - When a version number is missing from the POD or $main::VERSION, the file
    time and date are used as version number
  - The help message now includes --version and is more consistent with the
    usage message
  - Bugfix: the options in the help message are no longer randomly sorted
  - Bugfix: the man page is now properly formed when .pm files that have no POD
    are use'd